# k8s-resiliency-demo

./: .gitignore  README.md
k8s-traefik-stats/: stop.sh  stresstest-all.sh
k8s-traefik-stats/go/: .gitignore  Dockerfile  go.mod  go.sum  main.go  main.go.old
k8s-traefik-stats/k8s/: kafkajanitor-multi-svc-ingress.yaml  kafkajanitor-multi.yaml  nginx-deployment.yaml  nginx-multi-deploy.yaml  nginx-multi-svc.yaml  nginx-svc-ingress.yaml
k8s-traefik-stats/rust/: .gitignore  Cargo.toml  Dockerfile
k8s-traefik-stats/rust/src/: main.rs  model.rs  server.rs  websocket.rs
k8s-traefik-stats/web/: incoming.html  odometer.js  total.html
kube-rust-doom/: Dockerfile  LICENSE  makefile
kube-rust-doom/kube-rust-doom/: Cargo.toml
kube-rust-doom/kube-rust-doom/src/: main.rs
kubedoom/: Dockerfile  README.md  kubedoom.go  makefile
