[package]
name = "k8s-traefik-stats"
version = "0.1.0"
authors = ["Emil H. Clausen <sequoiia@hummel.yt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linemux = "0.1.1"
tokio = { version = "^0.2", features = ["full"] }
log = "^0.4"
byte-unit = {version = "3.1.1", default-features = false}
http = "^0.2"
actix = "0.9.0"
actix-web-actors = "2.0.0"
actix-web = "^2.0"
actix-rt = "1"
pretty_env_logger = "0.4.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
futures = "^0.3"
crossbeam = "0.7.3"
rand = "0.7.3"